<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rooms">

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="com.example.jusanbookingapp.presentation.rooms.RoomsFragment"
        android:label="@string/string_rooms"
        tools:layout="@layout/fragment_rooms" >
        <action
            android:id="@+id/action_navigation_rooms_to_roomDetailsFragment"
            app:destination="@id/roomDetailsFragment"
            app:popUpTo="@id/navigation_rooms" />
    </fragment>

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.example.jusanbookingapp.presentation.book.BookFragment"
        android:label="@string/string_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.jusanbookingapp.presentation.profile.ProfileFragment"
        android:label="@string/string_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_userReservationsFragment"
            app:destination="@id/userReservationsFragment"
            app:popUpTo="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/roomDetailsFragment"
        android:name="com.example.jusanbookingapp.presentation.rooms.roomDetails.RoomDetailsFragment"
        android:label="fragment_room_details"
        tools:layout="@layout/fragment_room_details" >
        <argument
            android:name="roomNumber"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/userReservationsFragment"
        android:name="com.example.jusanbookingapp.presentation.profile.userReservations.UserReservationsFragment"
        android:label="UserReservationsFragment" />
    <fragment
        android:id="@+id/splashScreenFragment2"
        android:name="com.example.jusanbookingapp.presentation.SplashScreenFragment"
        android:label="fragment_splash_screen"
        tools:layout="@layout/fragment_splash_screen" >
        <action
            android:id="@+id/action_splashScreenFragment2_to_navigation_rooms"
            app:destination="@id/navigation_rooms" />
    </fragment>
</navigation>